<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.rasyidcode.tmdbapp.ui.home.HomeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_now_playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_now_playing"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/show_all_now_playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@string/text_show_all"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_now_playing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_now_playing"
                app:movieList="@{viewModel.nowPlayingMovies}"
                tools:itemCount="10"
                tools:listitem="@layout/item_movie_card" />

            <TextView
                android:id="@+id/label_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_popular"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list_now_playing" />

            <TextView
                android:id="@+id/show_all_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@string/text_show_all"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list_now_playing" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:movieList="@{viewModel.popularMovies}"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_popular"
                tools:itemCount="10"
                tools:listitem="@layout/item_movie_card" />

            <TextView
                android:id="@+id/label_top_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_top_rated"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list_popular" />

            <TextView
                android:id="@+id/show_all_top_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@string/text_show_all"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list_popular" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_top_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:movieList="@{viewModel.topRatedMovies}"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_top_rated"
                tools:itemCount="10"
                tools:listitem="@layout/item_movie_card" />

            <TextView
                android:id="@+id/label_upcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_upcoming"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list_top_rated" />

            <TextView
                android:id="@+id/show_all_upcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@string/text_show_all"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list_top_rated" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:movieList="@{viewModel.upcomingMovies}"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_upcoming"
                tools:itemCount="10"
                tools:listitem="@layout/item_movie_card" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>